Fixed bug #71196 (Memory leak with out-of-order live ranges)